destinationrule-shop.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: shop
  namespace: shop
spec:
  host: shop
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
