virtualservice-shop.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: shop
  namespace: shop
spec:
  hosts:
    - shop.example.local
  gateways:
    - public-gw
  http:
    - route:
        - destination:
            host: shop
            subset: v1
          weight: 100
